[gd_scene load_steps=2 format=3 uid="uid://borp7xe2de2u0"]

[ext_resource type="Script" path="res://addons/editor_icon_previewer/editor_icon_window.gd" id="1"]

[node name="window" type="AcceptDialog"]
script = ExtResource("1")

[node name="body" type="VBoxContainer" parent="."]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="search" type="HBoxContainer" parent="body"]
layout_mode = 2

[node name="box" type="LineEdit" parent="body/search"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search icons..."
caret_blink = true

[node name="found" type="LineEdit" parent="body/search"]
layout_mode = 2
focus_mode = 0
text = "Found: 0"
editable = false

[node name="icons" type="HSplitContainer" parent="body"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1

[node name="previews" type="ScrollContainer" parent="body/icons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="container" type="GridContainer" parent="body/icons/previews"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 18

[node name="info" type="PanelContainer" parent="body/icons"]
self_modulate = Color(0.615686, 0.615686, 0.615686, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="icon" type="VBoxContainer" parent="body/icons/info"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="label" type="Label" parent="body/icons/info/icon"]
layout_mode = 2
text = "Select any icon."

[node name="preview" type="TextureRect" parent="body/icons/info/icon"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
expand_mode = 1
stretch_mode = 5

[node name="size" type="Label" parent="body/icons/info/icon"]
layout_mode = 2

[node name="copied" type="Label" parent="body/icons/info/icon"]
visible = false
layout_mode = 2
text = "Copied to clipboard!"

[node name="space" type="Control" parent="body/icons/info/icon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="params" type="VBoxContainer" parent="body/icons/info/icon"]
layout_mode = 2

[node name="icon" type="Label" parent="body/icons/info/icon/params"]
layout_mode = 2
text = "Icons preview size"

[node name="size" type="HBoxContainer" parent="body/icons/info/icon/params"]
layout_mode = 2

[node name="range" type="HSlider" parent="body/icons/info/icon/params/size"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
min_value = 16.0
max_value = 128.0
value = 16.0

[node name="pixels" type="Label" parent="body/icons/info/icon/params/size"]
layout_mode = 2
text = "16 px"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="visibility_changed" from="." to="." method="_on_window_visibility_changed"]
[connection signal="text_changed" from="body/search/box" to="." method="_on_search_text_changed"]
[connection signal="mouse_exited" from="body/icons/previews/container" to="." method="_on_container_mouse_exited"]
[connection signal="value_changed" from="body/icons/info/icon/params/size/range" to="." method="_on_size_changed"]
